--- a/grid.html
+++ b/grid.html
@@ -9,11 +9,22 @@
 </head>
 <body>
     <div id="container">
-        <div class="content content1">content1</div>
-        <div class="content content2">content2</div>
+        <div class="content content1">
+            <img src="./assets/cw_logo.jpeg" alt="" width="60%">
+        </div>
+        <div class="content content2">
+            <h1>Online IT Bootcamp</h1>
+        </div>
         <div class="content content3">content3</div>
-        <div class="content content4">content4</div>
-        <div class="content content5">content5</div>
+        <div class="content content4">
+            <ul>
+                <a href="">AWS Devops</a>
+                <a href="">Full Stack Developer</a>
+            </ul>
+        </div>
+        <div class="content content5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis molestiae ut vitae possimus ipsa debitis rem fuga quibusdam beatae commodi?
+        </div>
         <div class="content content6">content6</div>
         <div class="content content7">content7</div>
         <div class="content content8">content8</div>
